# bookie

./: .gitignore  Cargo.toml  Dockerfile  README.md  README.org
src/: books.rs  commands.rs  db.rs  main.rs  state.rs  tests.rs  users.rs
src/dbs/: db.rs  users.rs
